--- a/thanks/index.html
+++ b/thanks/index.html
@@ -61,6 +61,7 @@
                             <p>Out of all my friends, toohi is the best friend of mine that I have. She is literally the coolest person I know, and I can't even compare to what they can do, because they're so cool! Toohi is one of the coolest music composers ever, and their skills show extraordinary performance when they are creating their art, as well.<br><br>I really appreciate that they are a friend of mine, through the ups and downs of my personal struggles, they're definitely a keeper... <i>whatever that could mean...</i></p>
                             <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#toohiDiscordModal">Discord</button>
                             <a class="btn btn-secondary" href="https://soundcloud.com/toohimillion" target="_blank">Soundcloud</a>
+                            <a class="btn btn-secondary" href="https://www.youtube.com/@toohiisbread" target="_blank">YouTube</a>
                         </div>
                     </div>
                     <hr>
@@ -74,6 +75,7 @@
                             <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#berhDiscordModal">Discord</button>
                             <a class="btn btn-secondary" href="https://soundcloud.com/xzaviersaccount" target="_blank">Soundcloud</a>
                             <a class="btn btn-secondary" href="https://steamcommunity.com/profiles/76561199023641672" target="_blank">Steam</a>
+                            <a class="btn btn-secondary" href="https://www.youtube.com/@Berh" target="_blank">YouTube</a>
                         </div>
                     </div>
                     <hr>
@@ -89,13 +91,13 @@
                     <hr>
                     <div class="row">
                         <div class="col-3">
-                             <img src="https://praxor.wtf/media/bluefire%20lq.jpg" width="200px">
+                             <img src="https://praxor.wtf/media/blue.png" width="200px" height="200px">
                         </div>
                         <div class="col-6">
                             <h1>⭐ Blueistic</h1>
                             <p>Now now, you might be thinking: "praxor, who the hell is <i>this</i> guy!" -berh<br><br>Well, to answer your random question, Anti-citizen, this guy is the coolest bro I know. He's literally the rizzler! Guys, you can't get enough of blue, I mean he's like so friendly it's honestly quite shocking how much people don't notice this! Well, if you do notice, you're truly one to have blue as a bro.</p>
                             <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#bluefireDiscordModal">Discord</button>
-                            <a class="btn btn-secondary" href="https://soundcloud.com/bluefireplayz" target="_blank">Soundcloud</a>
+                            <a class="btn btn-secondary" href="https://www.youtube.com/@Blueistic" target="_blank">YouTube</a>
                         </div>
                     </div>
                     <hr>
