--- a/contact/index.html
+++ b/contact/index.html
@@ -69,7 +69,7 @@
                                 <td>праксор освященный</td>
                                 <td>praxor</td>
                                 <td>Discord</td>
-                                <td>I check this OFTEN. You can also join my Discord Server: (link)</td>
+                                <td>I check this OFTEN. You can also join my Discord Server: <a href="https://discord.gg/rjZHDCT2MW" target="_blank">https://discord.gg/rjZHDCT2MW</a></td>
                             </tr>
                             <tr>
                                 <td scope="row">2</td>
