--- a/thanks/index.html
+++ b/thanks/index.html
@@ -182,161 +182,22 @@
                     <hr>
                     <div class="row">
                         <div class="col-3">
-                            <img src="https://praxor.wtf/media/oraxor.png" width="200px">
+                            <img src="https://praxor.wtf/media/wonderblake.jpg" width="200px">
                         </div>
                         <div class="col-6">
-                            <h1>Example Name</h1>
-                            <p>Example Humanoid Description</p>
-                            <button class="btn btn-primary" href="#">Example Button / Social</button>
-                            <button class="btn btn-secondary" href="#">Secondary Button / Social</button>
+                            <h1>Wonder_blake</h1>
+                            <p>This guy is incriminatingly cool, and there's nothing else about it. I am putting him in the special thanks because he's definitely a real one, as well as a cool person to hang out with! I wonde- wait... that's his job... Anyways, this guy is also one of my besties at heart, no matter where he goes.</p>
+                            <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#wonderDiscordModal">Discord</button>
                         </div>
                     </div>
                     <hr>
-                    <div class="row">
-                        <div class="col-3">
-                            <img src="https://praxor.wtf/media/oraxor.png" width="200px">
-                        </div>
-                        <div class="col-6">
-                            <h1>Example Name</h1>
-                            <p>Example Humanoid Description</p>
-                            <button class="btn btn-primary" href="#">Example Button / Social</button>
-                            <button class="btn btn-secondary" href="#">Secondary Button / Social</button>
-                        </div>
-                    </div>
-                    <hr>
-                    <div class="row">
-                        <div class="col-3">
-                            <img src="https://praxor.wtf/media/oraxor.png" width="200px">
-                        </div>
-                        <div class="col-6">
-                            <h1>Example Name</h1>
-                            <p>Example Humanoid Description</p>
-                            <button class="btn btn-primary" href="#">Example Button / Social</button>
-                            <button class="btn btn-secondary" href="#">Secondary Button / Social</button>
-                        </div>
-                    </div>
-                    <hr>
-                    <div class="row">
-                        <div class="col-3">
-                            <img src="https://praxor.wtf/media/oraxor.png" width="200px">
-                        </div>
-                        <div class="col-6">
-                            <h1>Example Name</h1>
-                            <p>Example Humanoid Description</p>
-                            <button class="btn btn-primary" href="#">Example Button / Social</button>
-                            <button class="btn btn-secondary" href="#">Secondary Button / Social</button>
-                        </div>
-                    </div>
-                    <hr>
-                    <div class="row">
-                        <div class="col-3">
-                            <img src="https://praxor.wtf/media/oraxor.png" width="200px">
-                        </div>
-                        <div class="col-6">
-                            <h1>Example Name</h1>
-                            <p>Example Humanoid Description</p>
-                            <button class="btn btn-primary" href="#">Example Button / Social</button>
-                            <button class="btn btn-secondary" href="#">Secondary Button / Social</button>
-                        </div>
-                    </div>
-                    <hr>
-                    <div class="row">
-                        <div class="col-3">
-                            <img src="https://praxor.wtf/media/oraxor.png" width="200px">
-                        </div>
-                        <div class="col-6">
-                            <h1>Example Name</h1>
-                            <p>Example Humanoid Description</p>
-                            <button class="btn btn-primary" href="#">Example Button / Social</button>
-                            <button class="btn btn-secondary" href="#">Secondary Button / Social</button>
-                        </div>
-                    </div>
-                    <hr>
-                    <div class="row">
-                        <div class="col-3">
-                            <img src="https://praxor.wtf/media/oraxor.png" width="200px">
-                        </div>
-                        <div class="col-6">
-                            <h1>Example Name</h1>
-                            <p>Example Humanoid Description</p>
-                            <button class="btn btn-primary" href="#">Example Button / Social</button>
-                            <button class="btn btn-secondary" href="#">Secondary Button / Social</button>
-                        </div>
-                    </div>
-                    <hr>
-                    <div class="row">
-                        <div class="col-3">
-                            <img src="https://praxor.wtf/media/oraxor.png" width="200px">
-                        </div>
-                        <div class="col-6">
-                            <h1>Example Name</h1>
-                            <p>Example Humanoid Description</p>
-                            <button class="btn btn-primary" href="#">Example Button / Social</button>
-                            <button class="btn btn-secondary" href="#">Secondary Button / Social</button>
-                        </div>
-                    </div>
-                    <hr>
-                    <div class="row">
-                        <div class="col-3">
-                            <img src="https://praxor.wtf/media/oraxor.png" width="200px">
-                        </div>
-                        <div class="col-6">
-                            <h1>Example Name</h1>
-                            <p>Example Humanoid Description</p>
-                            <button class="btn btn-primary" href="#">Example Button / Social</button>
-                            <button class="btn btn-secondary" href="#">Secondary Button / Social</button>
-                        </div>
-                    </div>
-                    <hr>
-                    <div class="row">
-                        <div class="col-3">
-                            <img src="https://praxor.wtf/media/oraxor.png" width="200px">
-                        </div>
-                        <div class="col-6">
-                            <h1>Example Name</h1>
-                            <p>Example Humanoid Description</p>
-                            <button class="btn btn-primary" href="#">Example Button / Social</button>
-                            <button class="btn btn-secondary" href="#">Secondary Button / Social</button>
-                        </div>
-                    </div>
-                    <hr>
-                    <div class="row">
-                        <div class="col-3">
-                            <img src="https://praxor.wtf/media/oraxor.png" width="200px">
-                        </div>
-                        <div class="col-6">
-                            <h1>Example Name</h1>
-                            <p>Example Humanoid Description</p>
-                            <button class="btn btn-primary" href="#">Example Button / Social</button>
-                            <button class="btn btn-secondary" href="#">Secondary Button / Social</button>
-                        </div>
-                    </div>
-                    <hr>
-                    <div class="row">
-                        <div class="col-3">
-                            <img src="https://praxor.wtf/media/oraxor.png" width="200px">
-                        </div>
-                        <div class="col-6">
-                            <h1>Example Name</h1>
-                            <p>Example Humanoid Description</p>
-                            <button class="btn btn-primary" href="#">Example Button / Social</button>
-                            <button class="btn btn-secondary" href="#">Secondary Button / Social</button>
-                        </div>
-                    </div>
-                    <hr>
-                    <div class="row">
-                        <div class="col-3">
-                            <img src="https://praxor.wtf/media/oraxor.png" width="200px">
-                        </div>
-                        <div class="col-6">
-                            <h1>Example Name</h1>
-                            <p>Example Humanoid Description</p>
-                            <button class="btn btn-primary" href="#">Example Button / Social</button>
-                            <button class="btn btn-secondary" href="#">Secondary Button / Social</button>
-                        </div>
-                    </div>
                 </div>
             </div>
+            <div class="px-5 py-5" style="background:linear-gradient(90deg,rgba(0,151,255,0.5) 0%,rgba(54,1,119,0.5) 50%,rgba(104,34,179,0.5) 100%);">
+                    <div class="container text-center justify-content-center d-flex px-5 py-5 rounded" style="background-color:rgba(20,20,20,0.4);">
+                        <h1>...and thanks to everyone else, for helping me be a praxor! ❤️</h1>
+                    </div>
+                </div>
             <div class="container">
                 <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
                     <p class="col-md-4 mb-0 text-body-secondary">© 2023 The Praxor Industries</p>
@@ -452,6 +313,19 @@
                         </div>
                         <div class="modal-body">
                             <p id="larviDiscordUsername">kkrlarvi</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="modal fade" tabindex="-1" id="wonderDiscordModal" aria-labelledby="wonderDiscord" aria-hidden="true">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title">Wonder_blake's discord</h5>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body">
+                            <p id="wonderDiscordUsername">wonder_blake</p>
                         </div>
                     </div>
                 </div>
