--- a/thanks/index.html
+++ b/thanks/index.html
@@ -120,6 +120,7 @@
                         <div class="col-6">
                             <h1>Fyre</h1>
                             <p>Even though we randomly met on Roblox, it was definitely a sure thing to have this guy as a friend! I mean come on, thi guy is literally himothy! He's funny, based, and cool, like your average 80s school movie bully, and it's respectable. He especially gets a thanks, for drawing that sexy art that you can find on my art page, at <a href="https://praxor.wtf/art">https://praxor.wtf/art</a><br><br>I didn't know what to put so that profile picture art is by <a href="https://twitter.com/hautecleare" target="_blank">https://twitter.com/hautecleare</a></p>
+                            <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#fyreDiscordModal">Discord</button>
                         </div>
                     </div>
                     <hr>
@@ -261,6 +262,19 @@
                         </div>
                         <div class="modal-body">
                             <p id="turioDiscordUsername">.turio</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="modal fade" tabindex="-1" id="fyreDiscordModal" aria-labelledby="fyreDiscord" aria-hidden="true">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title">Fyre's discord</h5>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body">
+                            <p id="fyreDiscordUsername">firecowwyt</p>
                         </div>
                     </div>
                 </div>
