--- a/art/index.html
+++ b/art/index.html
@@ -52,7 +52,7 @@
             </div>
             <div class="album py-5 bg-body-tertiary">
                 <div class="container">
-                    <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+                    <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3 d-flex">
                         <div class="col">
                             <div class="card shadow-sm">
                                 <img class="bd-placeholder-img card-img-top" src="https://praxor.wtf/media/praxor1.png">
@@ -187,10 +187,10 @@
                                     <div class="d-flex text-back">
                                         <figure>
                                             <blockquote class="blockquote">
-                                                <p>"example quote"</p>
+                                                <p>"holy hell this is gold"</p>
                                             </blockquote>
                                             <figcaption class="blockquote-footer">
-                                                User Unknown, <cite title="Date">Month XXXX</cite>
+                                                praxor, <cite title="Date">October 2023</cite>
                                             </figcaption>
                                         </figure>
                                     </div>
@@ -241,10 +241,10 @@
                                     <div class="d-flex text-back">
                                         <figure>
                                             <blockquote class="blockquote">
-                                                <p>""</p>
+                                                <p>"erm"</p>
                                             </blockquote>
                                             <figcaption class="blockquote-footer">
-                                                User Unknown, <cite title="Date">Month XXXX</cite>
+                                                praxor, <cite title="Date">September 2023</cite>
                                             </figcaption>
                                         </figure>
                                     </div>
