--- a/thanks/index.html
+++ b/thanks/index.html
@@ -196,7 +196,7 @@
             </div>
             <div class="px-5 py-5" style="background:linear-gradient(90deg,rgba(0,151,255,0.5) 0%,rgba(54,1,119,0.5) 50%,rgba(104,34,179,0.5) 100%);">
                     <div class="container text-center justify-content-center d-flex px-5 py-5 rounded" style="background-color:rgba(20,20,20,0.4);">
-                        <h1>...and thanks to everyone else, for helping me be a praxor! ❤️</h1>
+                        <h1>...and thanks to <a href="https://praxor.wtf/supporters" style="background: -webkit-linear-gradient(90deg, rgba(54,1,119,1) 0%, rgba(104,34,179,1) 100%);-webkit-background-clip: text;-webkit-text-fill-color: transparent;">everyone else</a>, for helping me be a praxor! ❤️</h1>
                     </div>
                 </div>
             <div class="container">
