--- a/art/index.html
+++ b/art/index.html
@@ -163,7 +163,7 @@
                         </div>
                         <div class="col">
                             <div class="card shadow-sm">
-                                <img class="card-img-top" src="https://praxor.wtf/media/fanart4.png">
+                                <img class="card-img-top" src="https://praxor.wtf/media/fanart4.png" height="600px">
                                 <div class="card-body">
                                     <p class="card-text">I mean, what can I say, this is definitely the most smug looking praxor I have ever seen. Drawn by Louies, using Roblox, this piece of art has truly been the best guess at what praxor looks like, despite me not giving him all that much information. Now that's certainly some skill!</p>
                                     <div class="d-flex text-back">
