--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
     <head>
         <title>Welcome to the New Praxorian Medium</title>
         <meta charset="UTF-8" />
-        <meta http-equiv="refresh" content="0; https://praxor.wtf/home"/>
     </head>
     <body>
         <p>Did you mean to go to <a href="https://praxor.wtf/home">https://praxor.wtf/home</a>?</p>
     </body>
+    <script>
+        window.location.href = 'https://praxor.wtf/home';
+    </script>
 </html>
