--- a/about/index.html
+++ b/about/index.html
@@ -6,6 +6,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+        <!-- <link href="style.css" rel="stylesheet"> --->
         <style>
             .navbar-brand {
                 transform: translateX(-50%);
@@ -17,22 +18,12 @@
                 background-size: 200% 200%;
                 animation: bg-pan-top;
             }
-            @keyframes bg-pan-top {
-                0% {
-                    background-position: 50% 100%;
-                }
-                100% {
-                    background-position: 50% 0%;
-                }
-            }
+            
         </style>
     </head>
-    <body>
-        <nav class="navbar navbar-expand-lg bg-body-tertiary" style="background-color: #6822b3">
+    <body style="background-color: #511b8c;">
+        <nav class="navbar navbar-expand-lg" style="background-color: #6822b3">
             <div class="container-fluid">
-                <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="#5555dd" class="bi bi-star-fill navbar-brand mx-auto" viewBox="0 0 16 16">
-                    <path d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z"/>
-                </svg>
                 <div class="collapse navbar-collapse px-5">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
@@ -40,7 +31,7 @@
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Extras</a>
-                            <ul class="dropdown-menu">
+                            <ul class="dropdown-menu" style="background-color: #511b8c;">
                                 <li><a class="dropdown-item" href="https://praxor.wtf/art">Art Album</a></li>
                                 <li><a class="dropdown-item" href="https://praxor.wtf/merch">Merchandise</a></li>
                                 <li><a class="dropdown-item" href="https://praxor.wtf/supporters">My Supporters</a></li>
@@ -53,24 +44,24 @@
                             <a class="nav-link active" aria-current="page" href="https://praxor.wtf/contact">Contact</a>
                         </li>
                     </ul>
-                    <i><span id="clock" class="text-right" href="#" style="font-family: Consolas, monospace;color:#777777"></span></i>
+                    <i><span id="clock" class="text-right" href="#" style="font-family: Consolas, monospace;color:#aaaaaa"></span></i>
                 </div>
             </div>
         </nav>
-        <main>
-            <div class="px-5 py-5">
+        <main style="background-color: #511b8c;">
+            <div class="px-5 py-5" style="background-color: #511b8c;">
                 <div class="container display-5 d-flex text-center justify-content-center">
                     <h1>About The Praxor Website</h1>
                 </div>
             </div>
-            <div class="px-4 py-4 bg-black" style="font-family: Consolas, monospace;">
-                <div class="container bg-body px-4 py-4 rounded">
-                    <h2>Hello world!</h2>
+            <div class="px-4 py-4 bg-rainblou" style="font-family:Consolas, monospace;background-color: #6822b3">
+                <div class="container px-4 py-4 rounded" style="background-color: rgba(10,10,10,0.3);">
+                    <h2>Hello world!</h2><audio src="../media/mule.mp3" controls autoplay loop></audio>
                     <p>I am praxor, a web developer who is curious about the art of computer science (i sound so chronically online rn), and I have always wanted to make a website that was just about me! No website makers, no guides, and still, all built from scratch. Never would I have thought in the 3 years of my web development journey that I would definitely go ahead and make my own website with a whole domain and everything, just me and the lone index.html that I started this journey with. Well, after all, I wasn't <i>just</i> trying to be a web developer, I was planning on doing more than just this, which is why I want <i>you</i>, the viewer of this website, to partake in my journey to becoming the number one! After all, you did just read through this first paragraph, so stay tuned to learn the rest about this website! It does have a very, <i>very interesting</i> history.</p>
                 </div>
             </div>
-            <div class="container">
-                <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+            <div class="container" style="background-color: #511b8c;">
+                <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top" style="background-color: #511b8c;border-color: #6822b3">
                     <p class="col-md-4 mb-0 text-body-secondary">© 2023 The Praxor Industries</p>
                     <a href="#" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
                         <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="#777777" class="bi bi-arrow-up" viewBox="0 0 16 16">
