bug hunting and thug hunting
- mobile compatibility on __all__ pages
- "everyone else" changes colors on hover to reveal the hidden url 
- fixed easter eggs and moved all files to a dedicated /media folder for more organization

Signed-off-by: praxor <66192947+praxor@users.noreply.github.com>

--- a/about/index.html
+++ b/about/index.html
@@ -13,51 +13,45 @@
                 left: 50%;
                 position: absolute;
             }
-            .jumbotron-background-gradient {
-                background: linear-gradient(180deg, rgba(104,34,179,10) 0%, rgba(0,0,0,1) 100%);
-                background-size: 200% 200%;
-                animation: bg-pan-top;
-            }
-            
         </style>
     </head>
     <body style="background-color: #511b8c;">
         <nav class="navbar navbar-expand-lg" style="background-color: #6822b3">
             <div class="container-fluid">
-                <div class="collapse navbar-collapse px-5">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="https://praxor.wtf/home">Home</a>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Extras</a>
-                            <ul class="dropdown-menu" style="background-color: #511b8c;">
-                                <li><a class="dropdown-item" href="https://praxor.wtf/art">Art Album</a></li>
-                                <li><a class="dropdown-item" href="https://praxor.wtf/merch">Merchandise</a></li>
-                                <li><a class="dropdown-item" href="https://praxor.wtf/supporters">My Supporters</a></li>
-                                <li><hr class="dropdown-divider"></li>
-                                <li><a class="dropdown-item" href="https://praxor.wtf/thanks">Special Thanks</a></li>
-                                <li><a class="dropdown-item" href="https://praxor.wtf/about">About</a></li>
-                            </ul>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="https://praxor.wtf/contact">Contact</a>
-                        </li>
-                    </ul>
-                    <i><span id="clock" class="text-right" href="#" style="font-family: Consolas, monospace;color:#aaaaaa"></span></i>
-                </div>
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0 px-5">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="https://praxor.wtf/home">Home</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Extras</a>
+                        <ul class="dropdown-menu" style="background-color: #511b8c;">
+                            <li><a class="dropdown-item" href="https://praxor.wtf/art">Art Album</a></li>
+                            <li><a class="dropdown-item" href="https://praxor.wtf/merch">Merchandise</a></li>
+                            <li><a class="dropdown-item" href="https://praxor.wtf/supporters">My Supporters</a></li>
+                            <li><hr class="dropdown-divider"></li>
+                            <li><a class="dropdown-item" href="https://praxor.wtf/thanks">Special Thanks</a></li>
+                            <li><a class="dropdown-item" href="https://praxor.wtf/about">About</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="https://praxor.wtf/contact">Contact</a>
+                    </li>
+                </ul>
+                <i><span id="clock" class="text-right" href="#" style="font-family: Consolas, monospace;color:#aaaaaa"></span></i>
             </div>
         </nav>
         <main style="background-color: #511b8c;">
             <div class="px-5 py-5" style="background-color: #511b8c;">
-                <div class="container display-5 d-flex text-center justify-content-center">
-                    <h1>About The Praxor Website</h1>
+                <div class="container d-flex text-center justify-content-center px-5 py-5">
+                    <i><h1 class="display-5 px-5 py-5">About The Praxor Website</h1></i>
                 </div>
             </div>
             <div class="px-4 py-4 bg-rainblou" style="font-family:Consolas, monospace;background-color: #6822b3">
                 <div class="container px-4 py-4 rounded" style="background-color: rgba(10,10,10,0.3);">
                     <h2>Hello world!</h2><audio src="../media/mule.mp3" controls autoplay loop></audio>
                     <p>I am praxor, a web developer who is curious about the art of computer science (i sound so chronically online rn), and I have always wanted to make a website that was just about me! No website makers, no guides, and still, all built from scratch. Never would I have thought in the 3 years of my web development journey that I would definitely go ahead and make my own website with a whole domain and everything, just me and the lone index.html that I started this journey with. Well, after all, I wasn't <i>just</i> trying to be a web developer, I was planning on doing more than just this, which is why I want <i>you</i>, the viewer of this website, to partake in my journey to becoming the number one! After all, you did just read through this first paragraph, so stay tuned to learn the rest about this website! It does have a very, <i>very interesting</i> history.</p>
+                    <hr>
+                    <h3></h3>
                 </div>
             </div>
             <div class="container" style="background-color: #511b8c;">
