--- a/thanks/index.html
+++ b/thanks/index.html
@@ -12,6 +12,19 @@
                 left: 50%;
                 position: absolute;
             }
+            .everyonecolor {
+                background: -webkit-linear-gradient(90deg, rgba(54,1,119,1) 0%, rgba(104,34,179,1) 100%);
+                -webkit-background-clip: text;
+                -webkit-text-fill-color: transparent;
+                transition: all 2s ease-in;
+                -webkit-transition: all 2s ease-in;
+            }
+            .everyonecolor:hover {
+                background: -webkit-linear-gradient(90deg, rgba(104,34,119,1) 0%, rgba(104,34,179,1) 100%);
+                -webkit-background-clip: text;
+                -webkit-text-fill-color: transparent;
+                transition: background 2s ease-in;
+            }
         </style>
     </head>
     <body>
@@ -20,43 +33,41 @@
                 <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="#5555dd" class="bi bi-star-fill navbar-brand mx-auto" viewBox="0 0 16 16">
                     <path d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z"/>
                 </svg>
-                <div class="collapse navbar-collapse px-5">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="https://praxor.wtf/home">Home</a>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Extras</a>
-                            <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="https://praxor.wtf/art">Art Album</a></li>
-                                <li><a class="dropdown-item" href="https://praxor.wtf/merch">Merchandise</a></li>
-                                <li><a class="dropdown-item" href="https://praxor.wtf/supporters">My Supporters</a></li>
-                                <li><hr class="dropdown-divider"></li>
-                                <li><a class="dropdown-item" href="https://praxor.wtf/thanks">Special Thanks</a></li>
-                                <li><a class="dropdown-item" href="https://praxor.wtf/about">About</a></li>
-                            </ul>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="https://praxor.wtf/contact">Contact</a>
-                        </li>
-                    </ul>
-                    <i><span id="clock" class="text-right" href="#" style="font-family: Consolas, monospace;color:#777777"></span></i>
-                </div>
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="https://praxor.wtf/home">Home</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Extras</a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="https://praxor.wtf/art">Art Album</a></li>
+                            <li><a class="dropdown-item" href="https://praxor.wtf/merch">Merchandise</a></li>
+                            <li><a class="dropdown-item" href="https://praxor.wtf/supporters">My Supporters</a></li>
+                            <li><hr class="dropdown-divider"></li>
+                            <li><a class="dropdown-item" href="https://praxor.wtf/thanks">Special Thanks</a></li>
+                            <li><a class="dropdown-item" href="https://praxor.wtf/about">About</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="https://praxor.wtf/contact">Contact</a>
+                    </li>
+                </ul>
+                <i><span id="clock" class="navbar-text" href="#" style="font-family: Consolas, monospace;color:#777777"></span></i>
             </div>
         </nav>
         <main>
-            <div class="p-5">
+            <div class="py-5 px-5">
                 <div class="container text-center">
                     <h1 class="display-5">Special Thanks</h1>
                 </div>
             </div>
-            <div class="p-4 px-5 bg-dark-subtle">
-                <div class="container">
+            <div class="py-4 px-5 bg-dark-subtle">
+                <div class="container px-5">
                     <div class="row">
-                        <div class="col-3">
-                             <img src="https://praxor.wtf/media/toohimillion.jpg" width="200px" alt="toohi soundcloud picture">
+                        <div class="col d-flex justify-content-center">
+                             <img src="https://praxor.wtf/media/toohimillion.jpg" width="200px" height="200px">
                         </div>
-                        <div class="col-6">
+                        <div class="col">
                             <h1>⭐ toohi</h1>
                             <p>Out of all my friends, toohi is the best friend of mine that I have. She is literally the coolest person I know, and I can't even compare to what they can do, because they're so cool! Toohi is one of the coolest music composers ever, and their skills show extraordinary performance when they are creating their art, as well.<br><br>I really appreciate that they are a friend of mine, through the ups and downs of my personal struggles, they're definitely a keeper... <i>whatever that could mean...</i></p>
                             <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#toohiDiscordModal">Discord</button>
@@ -66,10 +77,10 @@
                     </div>
                     <hr>
                     <div class="row">
-                        <div class="col-3">
-                             <img src="https://praxor.wtf/media/berh.jpg" width="200px">
+                        <div class="col d-flex justify-content-center">
+                             <img src="https://praxor.wtf/media/berh.jpg" width="200px" height=200px>
                         </div>
-                        <div class="col-6">
+                        <div class="col">
                             <h1>⭐ Berh</h1>
                             <p>I consider Berh to be one of the <i><strong>bestest</strong></i> friends I have! I mean, you can literally be however and he would still hang out with you, or maybe he's just like that because I'm praxor.<br><br>Dunno, but he's like the best of the best as being a real one. Dude is like a god tier wingman to me.</p>
                             <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#berhDiscordModal">Discord</button>
@@ -80,20 +91,20 @@
                     </div>
                     <hr>
                     <div class="row">
-                        <div class="col-3">
+                        <div class="col d-flex justify-content-center">
                              <img src="https://praxor.wtf/media/milk.jpg" width="200px" height="200px">
                         </div>
-                        <div class="col-6">
+                        <div class="col">
                             <h1>⭐ milk</h1>
                             <p>ohww this silly goober :3 :3 how did you get here lol you don't even have socials besides discord (which for some reason you keep changing) you silly wittle goober you :3 :3<br><br>jokes aside, this person is definitely cool. i thank them for being a friend to me, AND FOR BEING THE ONE TO TRY A PROGRAMMING LANGUAGE, UGH! I HATE WORK — RAHHHH!</p>
                         </div>
                     </div>
                     <hr>
                     <div class="row">
-                        <div class="col-3">
+                        <div class="col d-flex justify-content-center">
                              <img src="https://praxor.wtf/media/blue.png" width="200px" height="200px">
                         </div>
-                        <div class="col-6">
+                        <div class="col">
                             <h1>⭐ Blueistic</h1>
                             <p>Now now, you might be thinking: "praxor, who the hell is <i>this</i> guy!" -berh<br><br>Well, to answer your random question, Anti-citizen, this guy is the coolest bro I know. He's literally the rizzler! Guys, you can't get enough of blue, I mean he's like so friendly it's honestly quite shocking how much people don't notice this! Well, if you do notice, you're truly one to have blue as a bro.</p>
                             <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#bluefireDiscordModal">Discord</button>
@@ -102,10 +113,10 @@
                     </div>
                     <hr>
                     <div class="row">
-                        <div class="col-3">
-                            <img src="https://praxor.wtf/media/turio.jpg" width="200px">
+                        <div class="col d-flex justify-content-center">
+                            <img src="https://praxor.wtf/media/turio.jpg" width="200px" height="200px">
                         </div>
-                        <div class="col-6">
+                        <div class="col">
                             <h1>⭐ Turio</h1>
                             <p>On the brightest of days, this guy one day just casually decides to join a minecraft server discord, and I end up dming him to play on a minecraft server. Little did I know, was I gonna get the rollercoaster of a century, as ever since 2016, this guy has been my top dog, my OG, my slime, idk whatever people say nowadays (i'm a big kid now i don't say that stuff).<br><br>However you wanna put it now, this guy will NEVER not be funny. Absolutely never. He's top in what he does, and he's even famous, you could say.</p>
                             <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#turioDiscordModal">Discord</button>
@@ -114,10 +125,10 @@
                     </div>
                     <hr>
                     <div class="row">
-                        <div class="col-3">
-                            <img src="https://praxor.wtf/media/fyre.jpg" width="200px">
+                        <div class="col d-flex justify-content-center">
+                            <img src="https://praxor.wtf/media/fyre.jpg" width="200px" height="200px">
                         </div>
-                        <div class="col-6">
+                        <div class="col">
                             <h1>Fyre</h1>
                             <p>Even though we randomly met on Roblox, it was definitely a sure thing to have this guy as a friend! I mean come on, thi guy is literally himothy! He's funny, based, and cool, like your average 80s school movie bully, and it's respectable. He especially gets a thanks, for drawing that sexy art that you can find on my art page, at <a href="https://praxor.wtf/art">https://praxor.wtf/art</a><br><br>I didn't know what to put so that profile picture art is by <a href="https://twitter.com/hautecleare" target="_blank">https://twitter.com/hautecleare</a></p>
                             <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#fyreDiscordModal">Discord</button>
@@ -125,10 +136,10 @@
                     </div>
                     <hr>
                     <div class="row">
-                        <div class="col-3">
-                            <img src="https://louiesbox.xyz/flinky.jpg" width="200px">
+                        <div class="col d-flex justify-content-center">
+                            <img src="https://louiesbox.xyz/flinky.jpg" width="200px" height="200px">
                         </div>
-                        <div class="col-6">
+                        <div class="col">
                             <h1>Louies</h1>
                             <p>Now guys, this person may not like me, however I still should respect the fact that for a great time, that they were still a cool person to hang out with. I mean, you really couldn't ask more from Louies, as he draws some cool art that I personally enjoy. Maybe, someone out there has even framed their art on a wall! I even made a website for them once, so you should go check it out at <a href="https://louiesbox.xyz" target="_blank">https://louiesbox.xyz</a> for me, alright?</p>
                             <a class="btn btn-primary" href="https://louiesbox.xyz" target="_blank">Website</a>
@@ -136,10 +147,10 @@
                     </div>
                     <hr>
                     <div class="row">
-                        <div class="col-3">
-                            <img src="https://praxor.wtf/media/froggy.jpg" width="200px">
+                        <div class="col d-flex justify-content-center">
+                            <img src="https://praxor.wtf/media/froggy.jpg" width="200px" height="200px">
                         </div>
-                        <div class="col-6">
+                        <div class="col">
                             <h1>Froggicycle</h1>
                             <p>Certified real one since day one, this guy has been up and there for me, even though this is the internet. I mean, sometimes a praxor needs emotional support, and this guy has definitely had my back. I couldn't of dared to ask for a different froggicycle that was in any way different from this guy. </p>
                             <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#froggyDiscordModal">Discord</button>
@@ -147,10 +158,10 @@
                     </div>
                     <hr>
                     <div class="row">
-                        <div class="col-3">
-                            <img src="https://praxor.wtf/media/mac.png" width="200px">
+                        <div class="col d-flex justify-content-center">
+                            <img src="https://praxor.wtf/media/mac.png" width="200px" height="200px">
                         </div>
-                        <div class="col-6">
+                        <div class="col">
                             <h1>Macintoshing</h1>
                             <p>No one would've ever suspected me to put this guy on my wall of fame, but he's definitely cool, despite us not being friends. No one said this was a friends wall, after all. This guy is actually the motivation to update my website, as from humble beginnings of us learning HTML together, he decided to make it a real challenge to make a cooler website than one another. Let's see how you eat this one, mac! Emm, feel free to check out my competition below.<br><br>P.S. He might've quit Discord, so I don't know if you're gonna be able to reach him using that.</p>
                             <a class="btn btn-primary" href="https://easfrq.live">Website</a>
@@ -159,10 +170,10 @@
                     </div>
                     <hr>
                     <div class="row">
-                        <div class="col-3">
-                            <img src="https://praxor.wtf/media/nxne.gif" width="200px">
+                        <div class="col d-flex justify-content-center">
+                            <img src="https://praxor.wtf/media/nxne.gif" width="200px" height="200px">
                         </div>
-                        <div class="col-6">
+                        <div class="col">
                             <h1>Nxne</h1>
                             <p>His name is pronounced as "Nine", like the number. He is literally the coolest high school senior (now graduated) ever tbh. He just absolutely deserves a special recognition here, because he listens to me and hears me out no matter what I'm smoking.</p>
                             <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#nxneDiscordModal">Discord</button>
@@ -170,10 +181,10 @@
                     </div>
                     <hr>
                     <div class="row">
-                        <div class="col-3">
+                        <div class="col d-flex justify-content-center">
                             <img src="https://praxor.wtf/media/larvi.jpg" width="200px" height="200px">
                         </div>
-                        <div class="col-6">
+                        <div class="col">
                             <h1>Larvi</h1>
                             <p>Yes, yes. I know his name is literally a Pokemon, but he's like the coolest russian bro. Also from humble beginnings, once he joined Discord, he's been with me as a friend for a while, and I honestly have taken a liking to what he does. He's also my motivation for learning russian, and he also prompted me to remake my website.</p>
                             <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#larviDiscordModal">Discord</button>
@@ -182,12 +193,12 @@
                     </div>
                     <hr>
                     <div class="row">
-                        <div class="col-3">
-                            <img src="https://praxor.wtf/media/wonderblake.jpg" width="200px">
+                        <div class="col d-flex justify-content-center">
+                            <img src="https://praxor.wtf/media/wonderblake.jpg" width="200px" height="200px">
                         </div>
-                        <div class="col-6">
+                        <div class="col">
                             <h1>Wonder_blake</h1>
-                            <p>This guy is incriminatingly cool, and there's nothing else about it. I am putting him in the special thanks because he's definitely a real one, as well as a cool person to hang out with! I wonde- wait... that's his job... Anyways, this guy is also one of my besties at heart, no matter where he goes.</p>
+                            <p>This guy is incriminatingly cool, and sweet! There's really nothing else I could put to make this guy seem like he's the best. I am putting him in the special thanks because he's definitely a real one, as well as a cool person to hang out with! I wonde- wait... that's his job... Anyways, this guy is also one of my besties at heart, no matter where he goes.</p>
                             <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#wonderDiscordModal">Discord</button>
                         </div>
                     </div>
@@ -196,7 +207,7 @@
             </div>
             <div class="px-5 py-5" style="background:linear-gradient(90deg,rgba(0,151,255,0.5) 0%,rgba(54,1,119,0.5) 50%,rgba(104,34,179,0.5) 100%);">
                     <div class="container text-center justify-content-center d-flex px-5 py-5 rounded" style="background-color:rgba(20,20,20,0.4);">
-                        <h1>...and thanks to <a href="https://praxor.wtf/supporters" style="background: -webkit-linear-gradient(90deg, rgba(54,1,119,1) 0%, rgba(104,34,179,1) 100%);-webkit-background-clip: text;-webkit-text-fill-color: transparent;">everyone else</a>, for helping me be a praxor! ❤️</h1>
+                        <h1>...and thanks to <a href="https://praxor.wtf/supporters" class="everyonecolor">everyone else</a>, for helping me be a praxor! ❤️</h1>
                     </div>
                 </div>
             <div class="container">
