--- a/about/index.html
+++ b/about/index.html
@@ -18,7 +18,7 @@
     <body style="background-color: #511b8c;">
         <nav class="navbar navbar-expand-lg" style="background-color: #6822b3">
             <div class="container-fluid">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0 px-5">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="https://praxor.wtf/home">Home</a>
                     </li>
