page warning shenanigans
Signed-off-by: praxor <66192947+praxor@users.noreply.github.com>

--- a/about/index.html
+++ b/about/index.html
@@ -16,6 +16,7 @@
         </style>
     </head>
     <body style="background-color: #511b8c;">
+        <marquee class="bg-warning text-black" style="font-family: consolas, monospace;">The Praxor Website // Under Construction</marquee>
         <nav class="navbar navbar-expand-lg" style="background-color: #6822b3">
             <div class="container-fluid">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
@@ -49,9 +50,12 @@
             <div class="px-4 py-4 bg-rainblou" style="font-family:Consolas, monospace;background-color: #6822b3">
                 <div class="container px-4 py-4 rounded" style="background-color: rgba(10,10,10,0.3);">
                     <h2>Hello world!</h2><audio src="../media/mule.mp3" controls autoplay loop></audio>
-                    <p>I am praxor, a web developer who is curious about the art of computer science (i sound so chronically online rn), and I have always wanted to make a website that was just about me! No website makers, no guides, and still, all built from scratch. Never would I have thought in the 3 years of my web development journey that I would definitely go ahead and make my own website with a whole domain and everything, just me and the lone index.html that I started this journey with. Well, after all, I wasn't <i>just</i> trying to be a web developer, I was planning on doing more than just this, which is why I want <i>you</i>, the viewer of this website, to partake in my journey to becoming the number one! After all, you did just read through this first paragraph, so stay tuned to learn the rest about this website! It does have a very, <i>very interesting</i> history.</p>
+                    <p>I am praxor, a web developer. Pretty sad, aye? Not really, I find joy in creating websites, so I just kinda made this one for fun. Y'know, casual stuff. I made this version of my website using <a href="https://getbootstrap.com" target="_blank">Bootstrap 5.3</a>, and I have had the most fun learning and making this website with this cool design library. Anyways, there's a violent history to this website, so I am gonna share it with you now.</p>
                     <hr>
-                    <h3></h3>
+                    <h3>Section 1: From the beginning</h3>
+                    <p>ok so basically like i woke up one day, decided to get the domain praxor.tk, and then go wild with <a href="https://pages.github.com" target="_blank">Github Pages</a>. Not my proudest moment, but it certainly was a beginning for a silly goober like me who was learning HTML at the time.</p>
+                    <img src="https://praxor.wtf/media/oraxor.png" style="border: 10px;border-color: black;border-width: 10px;">
+                    <figcaption>Screenshot of my first website.</figcaption>
                 </div>
             </div>
             <div class="container" style="background-color: #511b8c;">
