--- a/art/index.html
+++ b/art/index.html
@@ -15,6 +15,7 @@
         </style>
     </head>
     <body>
+        <marquee class="bg-warning text-black" style="font-family: consolas, monospace;">The Praxor Website // Under Construction</marquee>
         <nav class="navbar navbar-expand-lg bg-body-tertiary" style="background-color: #6822b3">
             <div class="container-fluid">
                 <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="#5555dd" class="bi bi-star-fill navbar-brand mx-auto" viewBox="0 0 16 16">
