--- a/home/index.html
+++ b/home/index.html
@@ -28,11 +28,9 @@
         </style>
     </head>
     <body>
+        <marquee class="bg-warning text-black" style="font-family: consolas, monospace;">The Praxor Website // Under Construction</marquee>
         <nav class="navbar navbar-expand-lg bg-body-tertiary" style="background-color: #6822b3">
             <div class="container-fluid">
-                <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="#5555dd" class="bi bi-star-fill navbar-brand mx-auto" viewBox="0 0 16 16">
-                    <path d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z"/>
-                </svg>
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="#" id="alreadyHome">Home</a>
@@ -67,10 +65,10 @@
             </div>
             <br>
             <div class="py-5 px-5">
-                <div class="container d-flex justify-content-center">
-                    <div class="row row-cols-3">
+                <div class="container">
+                    <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3 d-flex">
                         <div class="col">
-                            <div class="card border-secondary" style="width: 18rem;">
+                            <div class="card border-secondary" style="">
                                 <img src="https://praxor.wtf/media/praxor1.png" class="card-img-top" alt="praxor">
                                 <div class="card-body">
                                     <h5 class="card-title">Who am I?</h5>
@@ -80,7 +78,7 @@
                             </div>
                         </div>
                         <div class="col">
-                            <div class="card border-secondary" style="width: 18rem;">
+                            <div class="card border-secondary" style="">
                                 <img src="https://praxor.wtf/media/praxor2.png" class="card-img-top" alt="praxor">
                                 <div class="card-body">
                                     <h5 class="card-title">What do I do?</h5>
@@ -89,7 +87,7 @@
                             </div>
                         </div>
                         <div class="col">
-                            <div class="card border-secondary" style="width: 18rem;">
+                            <div class="card border-secondary" style="">
                                 <img src="https://praxor.wtf/media/oraxor.png" class="card-img-top" alt="what the hell">
                                 <div class="card-body">
                                     <h5 class="card-title">Want more praxor?</h5>
@@ -120,7 +118,7 @@
             <div class="toast-container position-fixed bottom-0 end-0 p-3">
                 <div id="alreadyHomeToast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
                     <div class="toast-header">
-                        <img src="https://praxor.wtf/media/oraxor.png" width="16" height="16" class="rounded me-2" alt="praxor website logo">
+                        <img src="https://praxor.wtf/media/oraxor.png" width="7%" height="7%" class="rounded me-2" alt="praxor website logo">
                         <strong class="me-auto">The Praxor Website</strong>
                         <small>now</small>
                         <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
