mobile compatibility part 2: electric boogaloo
the most amazing mobile friendly update yet (i learned how to code it)
- added collapsible navbars on all pages
**- made it KNOWN that the entire website is a work in progress (basically this means its subject to change for you retards)**
- cards on home page are actually sized correctly to work on all pages with a respectable size
- this is update 4/5 i need to finish the about page and the page is completely done (for now...)

Signed-off-by: praxor <66192947+praxor@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Welcome to the New Praxorian Medium</title>
+        <title>a praxorian medium</title>
         <meta charset="UTF-8" />
+        <meta http-equiv="refresh" content="0;URL='https://praxor.wtf/home'" /> 
+        <style>
+            html {
+                background-color: white;
+                color: gray;
+                font-family: Consolas, monospace;
+            }
+        </style>
     </head>
     <body>
-        <p>Did you mean to go to <a href="https://praxor.wtf/home">https://praxor.wtf/home</a>?</p>
     </body>
     <script>
         window.location.href = 'https://praxor.wtf/home';
