--- a/about/index.html
+++ b/about/index.html
@@ -17,28 +17,36 @@
     </head>
     <body style="background-color: #511b8c;">
         <marquee class="bg-warning text-black" style="font-family: consolas, monospace;">The Praxor Website // Under Construction</marquee>
-        <nav class="navbar navbar-expand-lg" style="background-color: #6822b3">
+        <nav class="navbar navbar-expand-lg sticky-top" style="background-color: #6822b3">
+            <a class="navbar-brand">
+                <img src="https://praxor.wtf/media/oraxor.png" width="35" height="35" d-inline-block align-text-top>
+            </a>
             <div class="container-fluid">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="https://praxor.wtf/home">Home</a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Extras</a>
-                        <ul class="dropdown-menu" style="background-color: #511b8c;">
-                            <li><a class="dropdown-item" href="https://praxor.wtf/art">Art Album</a></li>
-                            <li><a class="dropdown-item" href="https://praxor.wtf/merch">Merchandise</a></li>
-                            <li><a class="dropdown-item" href="https://praxor.wtf/supporters">My Supporters</a></li>
-                            <li><hr class="dropdown-divider"></li>
-                            <li><a class="dropdown-item" href="https://praxor.wtf/thanks">Special Thanks</a></li>
-                            <li><a class="dropdown-item" href="https://praxor.wtf/about">About</a></li>
-                        </ul>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="https://praxor.wtf/contact">Contact</a>
-                    </li>
-                </ul>
-                <i><span id="clock" class="text-right" href="#" style="font-family: Consolas, monospace;color:#aaaaaa"></span></i>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#praxorNavbar" aria-controls="praxorNavbar" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="praxorNavbar">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="https://praxor.wtf/home">Home</a>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Extras</a>
+                            <ul class="dropdown-menu" style="background-color: #511b8c;">
+                                <li><a class="dropdown-item" href="https://praxor.wtf/art">Art Album</a></li>
+                                <li><a class="dropdown-item" href="https://praxor.wtf/merch">Merchandise</a></li>
+                                <li><a class="dropdown-item" href="https://praxor.wtf/supporters">My Supporters</a></li>
+                                <li><hr class="dropdown-divider"></li>
+                                <li><a class="dropdown-item" href="https://praxor.wtf/thanks">Special Thanks</a></li>
+                                <li><a class="dropdown-item" href="https://praxor.wtf/about">About</a></li>
+                            </ul>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="https://praxor.wtf/contact">Contact</a>
+                        </li>
+                    </ul>
+                    <i><span id="clock" class="text-right" href="#" style="font-family: Consolas, monospace;color:#aaaaaa"></span></i>
+                </div>
             </div>
         </nav>
         <main style="background-color: #511b8c;">
