--- a/art/index.html
+++ b/art/index.html
@@ -16,31 +16,36 @@
     </head>
     <body>
         <marquee class="bg-warning text-black" style="font-family: consolas, monospace;">The Praxor Website // Under Construction</marquee>
-        <nav class="navbar navbar-expand-lg bg-body-tertiary" style="background-color: #6822b3">
+        <nav class="navbar navbar-expand-lg bg-body-tertiary sticky-top" style="background-color: #6822b3">
+            <a class="navbar-brand">
+                <img src="https://praxor.wtf/media/oraxor.png" width="35" height="35" d-inline-block align-text-top>
+            </a>
             <div class="container-fluid">
-                <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="#5555dd" class="bi bi-star-fill navbar-brand mx-auto" viewBox="0 0 16 16">
-                    <path d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z"/>
-                </svg>
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0 px-5">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="https://praxor.wtf/home">Home</a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Extras</a>
-                        <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="https://praxor.wtf/art">Art Album</a></li>
-                            <li><a class="dropdown-item" href="https://praxor.wtf/merch">Merchandise</a></li>
-                            <li><a class="dropdown-item" href="https://praxor.wtf/supporters">My Supporters</a></li>
-                            <li><hr class="dropdown-divider"></li>
-                            <li><a class="dropdown-item" href="https://praxor.wtf/thanks">Special Thanks</a></li>
-                            <li><a class="dropdown-item" href="https://praxor.wtf/about">About</a></li>
-                        </ul>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="https://praxor.wtf/contact">Contact</a>
-                    </li>
-                </ul>
-                <i><span id="clock" class="text-right" href="#" style="font-family: Consolas, monospace;color:#777777"></span></i>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#praxorNavbar" aria-controls="praxorNavbar" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="praxorNavbar">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="https://praxor.wtf/home">Home</a>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Extras</a>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" href="https://praxor.wtf/art">Art Album</a></li>
+                                <li><a class="dropdown-item" href="https://praxor.wtf/merch">Merchandise</a></li>
+                                <li><a class="dropdown-item" href="https://praxor.wtf/supporters">My Supporters</a></li>
+                                <li><hr class="dropdown-divider"></li>
+                                <li><a class="dropdown-item" href="https://praxor.wtf/thanks">Special Thanks</a></li>
+                                <li><a class="dropdown-item" href="https://praxor.wtf/about">About</a></li>
+                            </ul>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="https://praxor.wtf/contact">Contact</a>
+                        </li>
+                    </ul>
+                    <i><span id="clock" class="navbar-text" href="#" style="font-family: Consolas, monospace;color:#777777"></span></i>
+                </div>
             </div>
         </nav>
         <main>
