shadow fixes and contact update
Signed-off-by: praxor <66192947+praxor@users.noreply.github.com>

--- a/home/index.html
+++ b/home/index.html
@@ -63,7 +63,7 @@
         </nav>
         <main>
             <div class="px-4 py-4 text-center jumbotron-background-gradient">
-                <div class="container rounded" style="background-color: rgba(25,25,25,0.7);">
+                <div class="container rounded shadow-lg" style="background-color: rgba(25,25,25,0.7);">
                     <div class="px-4 py-5 my-5">
                         <img src="https://praxor.wtf/media/oraxor.png">
                         <h1 class="display-5 fw-bold text-body-emphasis" style="font-family: Consolas, monospace;"><i>The Praxor Website</i></h1>
@@ -76,7 +76,7 @@
                 <div class="container">
                     <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3 d-flex">
                         <div class="col">
-                            <div class="card border-secondary" style="">
+                            <div class="card shadow">
                                 <img src="https://praxor.wtf/media/praxor1.png" class="card-img-top" alt="praxor">
                                 <div class="card-body">
                                     <h5 class="card-title">Who am I?</h5>
@@ -86,7 +86,7 @@
                             </div>
                         </div>
                         <div class="col">
-                            <div class="card border-secondary" style="">
+                            <div class="card shadow">
                                 <img src="https://praxor.wtf/media/praxor2.png" class="card-img-top" alt="praxor">
                                 <div class="card-body">
                                     <h5 class="card-title">What do I do?</h5>
@@ -95,7 +95,7 @@
                             </div>
                         </div>
                         <div class="col">
-                            <div class="card border-secondary" style="">
+                            <div class="card shadow">
                                 <img src="https://praxor.wtf/media/oraxor.png" class="card-img-top" alt="what the hell">
                                 <div class="card-body">
                                     <h5 class="card-title">Want more praxor?</h5>
