--- a/contact/index.html
+++ b/contact/index.html
@@ -57,7 +57,7 @@
             </div>
             <div class="px-4 py-5 bg-body-secondary">
                 <div class="container">
-                    <table class="table table-dark table-striped border">
+                    <table class="table table-dark table-striped border shadow-lg">
                         <thead>
                             <tr>
                                 <th scope="col">#</th>
@@ -69,42 +69,49 @@
                         </thead>
                         <tb>
                             <tr>
-                                <td scope="row">1</td>
+                                <th scope="row">1</th>
                                 <td>праксор освященный</td>
                                 <td>praxor</td>
                                 <td>Discord</td>
-                                <td>I check this OFTEN. You can also join my Discord Server: <a href="https://discord.gg/rjZHDCT2MW" target="_blank">https://discord.gg/rjZHDCT2MW</a></td>
+                                <td>I check this <i>often</i>. You can also join my Discord Server: <a href="https://discord.gg/rjZHDCT2MW" target="_blank">https://discord.gg/rjZHDCT2MW</a></td>
                             </tr>
                             <tr>
-                                <td scope="row">2</td>
+                                <th scope="row">2</th>
                                 <td>praxor</td>
                                 <td>contact@praxor.wtf</td>
                                 <td>Email</td>
-                                <td>Email Services are offline.</td>
+                                <td>Email Services are <span class="text-success">Online</span>.</td>
                             </tr>
                             <tr>
-                                <td scope="row">3</td>
+                                <th scope="row">3</th>
                                 <td>praxor</td>
                                 <td>@praxorf</td>
                                 <td>Twitter</td>
                                 <td>I do not check DMs often, just feel free to mention me in posts.</td>
                             </tr>
                             <tr>
-                                <td scope="row">4</td>
+                                <th scope="row">4</th>
                                 <td>praxor</td>
                                 <td>praxor</td>
                                 <td>SoundCloud</td>
-                                <td></td>
+                                <td><a href="https://soundcloud.com/praxor" target="_blank">https://soundcloud.com/praxor</a></td>
                             </tr>
                             <tr>
-                                <td scope="row">5</td>
+                                <th scope="row">5</th>
+                                <td>praxor</td>
+                                <td>@realpraxor</td>
+                                <td>Youtube</td>
+                                <td><a href="https://www.youtube.com/@realpraxor" target="_blank">https://www.youtube.com/@realpraxor</a></td>
+                            </tr>
+                            <tr>
+                                <th scope="row">6</th>
                                 <td>praxor</td>
                                 <td>praxor</td>
                                 <td>Steam</td>
                                 <td><a href="https://steamcommunity.com/id/praxor" target="_blank">https://steamcommunity.com/id/praxor</a></td>
                             </tr>
                             <tr>
-                                <td scope="row">6</td>
+                                <th scope="row">7</th>
                                 <td>deranged animal</td>
                                 <td>praxor2</td>
                                 <td>Steam (alt.)</td>
