--- a/home/index.html
+++ b/home/index.html
@@ -25,6 +25,24 @@
                     background-position: 50% 0%;
                 }
             }
+            /*
+            .fadetoblack {
+                background: linear-gradient(180deg, rgba(0,0,0,0) 0%, rgba(0,0,0,1) 100%);
+                height: 250px; 
+                max-height: 250px;
+                width: 100%;
+                max-width: 100%;
+                display: inline-block;
+            }
+            .fadetonormal {
+                background: linear-gradient(0deg, rgba(0,0,0,0) 0%, rgba(0,0,0,1) 100%);
+                height: 250px; 
+                max-height: 250px;
+                width: 100%;
+                max-width: 100%;
+                display: inline-block;
+            }
+            */
         </style>
     </head>
     <body>
@@ -74,9 +92,9 @@
             <br>
             <div class="py-5 px-5">
                 <div class="container">
-                    <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3 d-flex">
+                    <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3 d-flex px-5 py-5">
                         <div class="col">
-                            <div class="card shadow">
+                            <div class="card shadow border-0">
                                 <img src="https://praxor.wtf/media/praxor1.png" class="card-img-top" alt="praxor">
                                 <div class="card-body">
                                     <h5 class="card-title">Who am I?</h5>
@@ -86,7 +104,7 @@
                             </div>
                         </div>
                         <div class="col">
-                            <div class="card shadow">
+                            <div class="card shadow border-0">
                                 <img src="https://praxor.wtf/media/praxor2.png" class="card-img-top" alt="praxor">
                                 <div class="card-body">
                                     <h5 class="card-title">What do I do?</h5>
@@ -95,8 +113,8 @@
                             </div>
                         </div>
                         <div class="col">
-                            <div class="card shadow">
-                                <img src="https://praxor.wtf/media/oraxor.png" class="card-img-top" alt="what the hell">
+                            <div class="card shadow border-0">
+                                <img src="https://praxor.wtf/media/fanart10.png" class="card-img-top" alt="what the hell">
                                 <div class="card-body">
                                     <h5 class="card-title">Want more praxor?</h5>
                                     <p class="card-text">Feel free to get in touch, I don't bite. <i>You can also find my socials on this page.</i></p>
@@ -107,7 +125,23 @@
                     </div>
                 </div>
             </div>
-            <br>
+            <!--
+            <div class="fadetoblack"></div>
+            <div class="px-5 py-5 bg-black">
+                <div class="container">
+                    <h1 class="text-center">Hey.</h1>
+                    <div class="card">
+                        <div class="card-image-left">
+                            <img src="https://praxor.wtf/media/oraxor.png">
+                        </div>
+                        <div class="card-text">
+                            <p>Hey gays.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="fadetonormal"></div>
+-->
             <div class="container">
                 <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
                     <p class="col-md-4 mb-0 text-body-secondary">© 2023 The Praxor Industries</p>
