--- a/art/index.html
+++ b/art/index.html
@@ -309,6 +309,24 @@
                                 </div>
                             </div>
                         </div>
+                        <div class="col">
+                            <div class="card shadow-sm">
+                                <img class="card-img-top" src="https://praxor.wtf/media/halloween-praxor.png">
+                                <div class="card-body">
+                                    <p class="card-text">Drawn by 3 fantastic artists (including the one and only praxor), this is a character concept </p>
+                                    <div class="d-flex text-back">
+                                        <figure>
+                                            <blockquote class="blockquote">
+                                                <p>"he’s not a desktop he’s a minuscule portable device"</p>
+                                            </blockquote>
+                                            <figcaption class="blockquote-footer">
+                                                milk, <cite title="Date">October 2023</cite>
+                                            </figcaption>
+                                        </figure>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
