--- a/thanks/index.html
+++ b/thanks/index.html
@@ -147,7 +147,7 @@
                         </div>
                         <div class="col">
                             <h1>Louies</h1>
-                            <p>Now guys, this person may not like me, however I still should respect the fact that for a great time, that they were still a cool person to hang out with. I mean, you really couldn't ask more from Louies, as he draws some cool art that I personally enjoy. Maybe, someone out there has even framed their art on a wall! I even made a website for them once, so you should go check it out at <a href="https://louiesbox.xyz" target="_blank">https://louiesbox.xyz</a> for me, alright?</p>
+                            <p>I mean, you really couldn't ask more from Louies, as he draws some cool art that I personally, really enjoy. Maybe, someone out there has even framed their art on a wall! I even made a website for them once, so you should go check it out at <a href="https://louiesbox.xyz" target="_blank">https://louiesbox.xyz</a> for me, alright?</p>
                             <a class="btn btn-primary" href="https://louiesbox.xyz" target="_blank">Website</a>
                         </div>
                     </div>
